# sugarfunge-api

./: .env  .env.example  .gitignore  Cargo.toml  README.md  sugarfunge_metadata.scale
.github/workflows/: keycloak.yml  main.yml
crates/sugarfunge-api-admin/: Cargo.toml
crates/sugarfunge-api-admin-types/: Cargo.toml
crates/sugarfunge-api-admin-types/src/: asset.rs  lib.rs
crates/sugarfunge-api-admin/src/: account.rs  asset.rs  bag.rs  bundle.rs  lib.rs  market.rs  state.rs  util.rs  validator.rs
crates/sugarfunge-api-keycloak/: Cargo.toml
crates/sugarfunge-api-keycloak-types/: Cargo.toml
crates/sugarfunge-api-keycloak-types/src/: bag.rs  bundle.rs  market.rs  validator.rs
crates/sugarfunge-api-keycloak/src/: account.rs  asset.rs  bag.rs  bundle.rs  lib.rs  market.rs  state.rs  user.rs  util.rs  validator.rs
crates/sugarfunge-api-types/: Cargo.toml  sugarfunge_metadata.scale
crates/sugarfunge-api-types/src/: account.rs  account_types.rs  asset.rs  asset_types.rs  bag.rs  bundle.rs  bundle_types.rs  challenge.rs  config.rs  contract.rs  currency.rs  currency_types.rs  dex.rs  dex_types.rs  escrow.rs  escrow_types.rs  fula.rs  lib.rs  market.rs  market_types.rs  pool.rs  primitives.rs  user.rs  validator.rs  validator_types.rs
docker/: Dockerfile  Dockerfile.keycloak
src/: account.rs  args.rs  asset.rs  bag.rs  bundle.rs  challenge.rs  command.rs  config.rs  contract.rs  currency.rs  dex.rs  escrow.rs  fula.rs  main.rs  market.rs  nft.rs  pool.rs  state.rs  subscription.rs  token.rs  user.rs  util.rs  validator.rs
static/: ws.html
sugarfunge-api-types/: Cargo.toml  sugarfunge_metadata.scale
sugarfunge-api-types/src/: asset_types.rs  currency_types.rs  dex_types.rs  lib.rs  market_types.rs  types.rs
