[package]
name = "sugarfunge-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
sugarfunge-api-types = { path = "crates/sugarfunge-api-types" }
env_logger = "0.10.0"
clap = { version = "4.1.8", features = ["derive"] }
rand = "0.8.5"
hex = "0.4.3"
futures = "0.3"
crossbeam = "0.8"
actix = "0.13"
actix-web = "4.3"
actix-web-actors = "4.2"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpsee-types = "0.16.2"
url = { version = "2", features = ["serde"] }
derive_more = { version = "0.99.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive", "full", "bit-vec"] }
scale-info = { version = "2", features = ["bit-vec"] }

[dependencies.subxt]
git = "https://github.com/SugarFunge/subxt.git"
branch = "feature/polkadot-v0.9.37"

[dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.37"
package = "sp-keyring"

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.37"
package = "sp-std"

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.37"
package = "sp-io"
features = []

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.37"
package = "sp-core"
features = ["full_crypto"]

[features]
default = ["std"]
std = ["codec/std", "scale-info/std"]

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.37"
package = "sp-runtime"
