[package]
name = "sugarfunge-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[features]
default = ["std"]
std = ["codec/std", "scale-info/std"]

[dependencies]
sugarfunge-api-types = { path = "crates/sugarfunge-api-types" }
env_logger = "0.10.0"
clap = { version = "4.2.5", features = ["derive"] }
rand = "0.8.5"
hex = "0.4.3"
futures = "0.3"
crossbeam = "0.8"
actix = "0.13"
actix-web = "4.3"
actix-web-actors = "4.2"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
jsonrpsee-types = "0.18.2"
url = { version = "2", features = ["serde"] }
derive_more = { version = "0.99.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "full", "bit-vec"] }
scale-info = { version = "2.5.0", features = ["bit-vec"] }

[dependencies.subxt]
git = "https://github.com/paritytech/subxt.git"
branch = "master"
features = ["substrate-compat"]

[dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v1.0.0"
package = "sp-keyring"

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v1.0.0"
package = "sp-std"

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v1.0.0"
package = "sp-io"
features = []

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v1.0.0"
package = "sp-core"
features = ["full_crypto"]

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v1.0.0"
package = "sp-runtime"