[package]
name = "sugarfunge-api-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive", "full", "bit-vec"] }
scale-info = { version = "2.5.0", features = ["bit-vec"] }
bevy_derive = "0.12.1"
futures = "0.3.30"

[dependencies.subxt]
git = "https://github.com/paritytech/subxt.git"
branch = "master"
features = ["substrate-compat"]

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.43"
package = "sp-core"
features = ["full_crypto"]

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.43"
package = "sp-runtime"